# github-gitea-mirror

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  action.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/github_gitea_mirror/: __init__.py  __main__.py  cli.py  config.py  gitea.py  github.py  sync.py
tests/: __init__.py  test_config.py  test_github.py
