[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-gitea-mirror"
version = "0.1.0"
description = "Automatically discover and mirror your entire GitHub account to Gitea"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jesse Luo", email = "jesseweb@qq.com" }]
keywords = [
    "github",
    "gitea",
    "mirror",
    "sync",
    "backup",
    "git",
    "self-hosted",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Mirroring",
]
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/baibaomen/github-gitea-mirror"
Documentation = "https://github.com/baibaomen/github-gitea-mirror#readme"
Repository = "https://github.com/baibaomen/github-gitea-mirror"
Issues = "https://github.com/baibaomen/github-gitea-mirror/issues"
Changelog = "https://github.com/baibaomen/github-gitea-mirror/blob/main/CHANGELOG.md"

[project.scripts]
github-gitea-mirror = "github_gitea_mirror.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/github_gitea_mirror"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/github_gitea_mirror"]
branch = true
